--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,20 @@
 {
-    "builds": [
-      { "src": "main.py", "use": "@vercel/python" }
-    ],
-    "routes": [
-      { "src": "/(.*)", "dest": "main.py" }
-    ]
+  "version": 2,
+  "builds": [
+    {
+      "src": "main.py",
+      "use": "@vercel/python",
+      "config": { "maxLambdaSize": "50mb" }
+    }
+  ],
+  "routes": [
+    { "src": "/(.*)", "dest": "main.py" }
+  ],
+  "functions": {
+    "api/**": {
+      "maxDuration": 60
+    }
   }
-  
+}
+
+
