--- a/nightclub/vercel.json
+++ b/nightclub/vercel.json
@@ -9,6 +9,13 @@
     ],
     "routes": [
       { "src": "/(.*)", "dest": "main.py" }
-    ]
+    ],
+    "functions": {
+      "api/**": {
+        "maxDuration": 60
+      }
+    }
   }
+
+  
   
