changes to deployment code

--- a/.env
+++ b/.env
@@ -16,4 +16,4 @@ APIFY_TOKEN=apify_api_NMpYWMV4qMEIUAzjbafPgrwahftnkP12yp2v
 
 # Additional environment variables as needed...
 GCS_BUCKET_NAME=launc_ig
-GOOGLE_APPLICATION_CREDENTIALS=./launch_key.json
+GOOGLE_APPLICATION_CREDENTIALS=/Users/lucanosugiarso/Desktop/launch_dev/secrets.json
