--- a/amplify.yml
+++ b/amplify.yml
@@ -1,20 +1,18 @@
-version: 0.2
-
-phases:
-  install:
-    commands:
-      - echo "Installing dependencies..."
-      - pip install -r requirements.txt
-  pre_build:
-    commands:
-      - echo "Setting up environment variables and retrieving secrets..."
-      # (Any commands to set up your environment go here)
-  build:
-    commands:
-      - echo "Running deployment script..."
-      - chmod +x deploy.sh
-      - ./deploy.sh
-
-artifacts:
-  files:
-    - "**/*"
+version: 1
+applications:
+  - appRoot: .
+    frontend:
+      phases:
+        preBuild:
+          commands:
+            - echo "Installing dependencies..."
+            - pip install -r requirements.txt
+            # (Optional: retrieve secrets, etc.)
+        build:
+          commands:
+            - echo "Starting the server..."
+            - uvicorn main:app --host 0.0.0.0 --port 8000
+      artifacts:
+        baseDirectory: static
+        files:
+          - '**/*'
